--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
       ],
       "rules": {
         // "import/no-unresolved": "off",
-        "prettier/prettier": ["error", {"singleQuote": true, "parser": "flow"}],
+        // "prettier/prettier": ["error", {"singleQuote": true, "parser": ""}],
         "import/prefer-default-export": "off",
         "class-methods-use-this": "off"
         
@@ -60,7 +60,9 @@
         "plugin:@angular-eslint/template/recommended",
         "plugin:prettier/recommended"
       ],
-      "rules": {},
+      "rules": {
+        "max-len": ["error", { "code": 140 }]
+      },
       "excludedFiles" :["index.html"]
     }
   ]
